@@ -1,0 +1,11 @@
+jabber:
+  jid: user@server.com/fileserve
+  password: ***
+directory: /tmp/fileserve
+socks:
+  proxies:
+    - transfer.jabber.freenet.de
+    - proxy.jabber.org
+  addresses:
+    - 172.22.99.197
+  port: 65023
